manifests/os-http/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: os-http
  namespace: ems1
spec:
  selector:
    matchLabels:
      app: os-http
  template:
    metadata:
      labels:
        app: os-http
    spec:
      nodeSelector:
        compass-ci.io/node-role: master
      containers:
      - name: os-http
        image: initrd-http:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 15Gi
        securityContext:
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: var-cache
          mountPath: /var/cache/nginx
        - name: var-run
          mountPath: /var/run
        - name: os
          mountPath: /usr/share/nginx/html/os
        - name: localtime
          mountPath: /etc/localtime
          subPath: localtime
      volumes:
      - name: localtime
        configMap:
          name: localtime
      - name: var-cache
        emptyDir: {}
      - name: var-run
        emptyDir: {}
      - name: os
        hostPath:
          path: /srv/os
